Add title and description to config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+
+title: Gianluigi Riccardi – Technical EHS Manager
+description: Engineering Portfolio – CV, Predictive Maintenance, Lifting & Safety
