--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Gianluigi Riccardi – EHS – RAMS – Industrial Reliability Manager
-description: description: Curriculum Vitae
+description:Curriculum Vitae
