--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Gianluigi Riccardi – EHS – RAMS – Industrial Reliability Manager
+title: Gianluigi Riccardi – Safety, Reliability and Systems Engineering for Critical Assets
 description: Curriculum Vitae
